--- a/QLD_THD/appsettings.json
+++ b/QLD_THD/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DevConnection": "Data Source=NAM\\SQLEXPRESS;Initial Catalog=QLD_THD;Integrated Security=True"
+    "DevConnection": "Data Source=DESKTOP-UVEBIVV;Initial Catalog=QLĐ_THĐ;Integrated Security=True"
   },
   "AllowedHosts": "*"
 }
